--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -139,65 +139,65 @@
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="played indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="not-playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                       </tbody>
                     </table>
@@ -248,65 +248,65 @@
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="played indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="not-playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                       </tbody>
                     </table>
@@ -357,65 +357,65 @@
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="played indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="not-playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                       </tbody>
                     </table>
@@ -466,65 +466,65 @@
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="played indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="not-playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                         <tr>
                           <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
-                          <td>D</td>
+                          <td class="pos">D</td>
                           <td>30</td>
-                          <td class="pos">$0</td>
+                          <td>$0</td>
                         </tr>
                       </tbody>
                     </table>
