Added tabbed navigation to country selector

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -95,110 +95,80 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12 col-lg-7">
-              <div class="nl-players-filter-title">Filter by lEAgue:</div>
+            <div class="col-md-12 col-lg-8">
+              <div class="nl-players-filter-title">Filter by league:</div>
               <div class="nl-players-filter">
                 <div class="row align-items-center">
-                  <div class="col-md-12">
-                    <div class="owl-carousel pl-flag">
+                  <div>
+                    <ul role="tablist" class="country-selector nav nav-tabs">
+                      <li class="nav-item"><a data-toggle="tab" href="#usa" role="tab" class="country-selector__link active"><img src="assets/img/flag/USA.png" alt="USA" class="haat"></a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#spain" role="tab" class="country-selector__link"><img src="assets/img/flag/Spain.png" alt="Spain" class="haat"></a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#germany" role="tab" class="country-selector__link"><img src="assets/img/flag/Germany.png" alt="Germany" class="haat"></a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#france" role="tab" class="country-selector__link"><img src="assets/img/flag/France.png" alt="France" class="haat"></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="nl-players-filter-title">Filter by team:</div>
+              <div class="tab-content">
+                <div id="usa" role="tabpanel" class="tab-pane active fade show">
+                  <div class="nl-players-filter-caruseul">
+                    <div class="owl-carousel pl-teams">
                       <div>
-                        <button type="button" class="btn btn-link"><img src="assets/img/flag/USA.png" alt="USA"></button>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
                       </div>
                       <div>
-                        <button type="button" class="btn btn-link"><img src="assets/img/flag/Spain.png" alt="Spain"></button>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
                       </div>
                       <div>
-                        <button type="button" class="btn btn-link"><img src="assets/img/flag/Germany.png" alt="Germany"></button>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FC.png" alt="FC"></button>
                       </div>
                       <div>
-                        <button type="button" class="btn btn-link"><img src="assets/img/flag/France.png" alt="France"></button>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FC.png" alt="FC"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
+                      </div>
+                      <div>
+                        <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
                       </div>
                     </div>
                   </div>
-                  <!--div.col-md-7-->
-                  <!--    button.btn.btn-primary(type="clear") Reset Filter-->
                 </div>
-              </div>
-              <div class="nl-players-filter-title">FILTER by team:</div>
-              <div class="nl-players-filter-caruseul">
-                <div class="owl-carousel pl-teams">
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FC.png" alt="FC"></button>
+                <div id="spain" role="tabpanel" class="tab-pane fade">
+                  <div class="nl-players-filter-caruseul">
+                    <p>teams spain</p>
                   </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
+                </div>
+                <div id="germany" role="tabpanel" class="tab-pane fade">
+                  <div class="nl-players-filter-caruseul">
+                    <p>teams germany</p>
                   </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FC.png" alt="FC"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FC.png" alt="FC"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FC.png" alt="FC"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FC.png" alt="FC"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FC.png" alt="FC"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCB.png" alt="FCB"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-link"><img src="assets/img/emblem/MU.png" alt="MU"></button>
+                </div>
+                <div id="france" role="tabpanel" class="tab-pane fade">
+                  <div class="nl-players-filter-caruseul">
+                    <p>teams france</p>
                   </div>
                 </div>
               </div>
