--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -174,7 +174,7 @@
               </div>
             </div>
           </div>
-          <div class="row nl-no-wrap">
+          <div class="row">
             <div class="col-md-12 col-lg-8 nl-team-m600">
               <div class="nl-players-table nl-create-team-table">
                 <div class="nl-players-table-data-field">
