Add extra container classes to handle widths, and replace them with the container-fluid variant

--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -88,7 +88,7 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-contests">
-        <div class="container-fluid">
+        <div class="container">
           <div class="row align-items-center">
             <div class="col-12 col-sm-4 col-md-3 col-xl-2">
               <h1>contests</h1>
