--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -88,7 +88,7 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-create-team">
-        <div class="container-fluid">
+        <div class="container">
           <div class="row">
             <div class="col-md-12">
               <h1>CREATE TEAM</h1>
