--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -88,7 +88,7 @@
     </header>
     <main>
       <section class="nl-section nl-my-teams">
-        <div class="container-fluid">
+        <div class="container">
           <div class="row">
             <div class="col-md-12">
               <h1>My teams</h1>
