--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -88,7 +88,7 @@
     </header>
     <main>
       <section class="nl-section nl-players">
-        <div class="container-fluid">
+        <div class="container">
           <div class="row">
             <div class="col-md-12">
               <h1>PLAYERS</h1>
