make filters invisible until the country is selected

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -101,7 +101,7 @@
                 <div class="row align-items-center">
                   <div>
                     <ul role="tablist" class="country-selector nav nav-tabs">
-                      <li class="nav-item"><a data-toggle="tab" href="#usa" role="tab" class="country-selector__link active"><img src="assets/img/flag/USA.png" alt="USA" class="haat"></a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#usa" role="tab" class="country-selector__link"><img src="assets/img/flag/USA.png" alt="USA" class="haat"></a></li>
                       <li class="nav-item"><a data-toggle="tab" href="#spain" role="tab" class="country-selector__link"><img src="assets/img/flag/Spain.png" alt="Spain" class="haat"></a></li>
                       <li class="nav-item"><a data-toggle="tab" href="#germany" role="tab" class="country-selector__link"><img src="assets/img/flag/Germany.png" alt="Germany" class="haat"></a></li>
                       <li class="nav-item"><a data-toggle="tab" href="#france" role="tab" class="country-selector__link"><img src="assets/img/flag/France.png" alt="France" class="haat"></a></li>
@@ -109,10 +109,10 @@
                   </div>
                 </div>
               </div>
-              <div class="nl-players-filter-title">Filter by team:</div>
               <div class="tab-content">
-                <div id="usa" role="tabpanel" class="tab-pane active fade show">
+                <div id="usa" role="tabpanel" class="tab-pane fade show">
                   <div class="nl-players-filter-caruseul">
+                    <div class="nl-players-filter-title">Filter by team:</div>
                     <div class="owl-carousel pl-teams">
                       <div>
                         <button type="button" class="btn btn-link"><img src="assets/img/emblem/FCBrasil.png" alt="FCBrasil"></button>
@@ -157,16 +157,19 @@
                   </div>
                 </div>
                 <div id="spain" role="tabpanel" class="tab-pane fade">
+                  <div class="nl-players-filter-title">Filter by team:</div>
                   <div class="nl-players-filter-caruseul">
                     <p>teams spain</p>
                   </div>
                 </div>
                 <div id="germany" role="tabpanel" class="tab-pane fade">
+                  <div class="nl-players-filter-title">Filter by team:</div>
                   <div class="nl-players-filter-caruseul">
                     <p>teams germany</p>
                   </div>
                 </div>
                 <div id="france" role="tabpanel" class="tab-pane fade">
+                  <div class="nl-players-filter-title">Filter by team:</div>
                   <div class="nl-players-filter-caruseul">
                     <p>teams france</p>
                   </div>
