Removed primary classes to warning buttons due to inheritance

--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -209,7 +209,7 @@
                       <div class="nl-team-card-footer--left">
                         <div class="nl-team-card-btns">
                           <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
-                          <button class="btn btn-primary btn-sm btn-warning">Delete</button>
+                          <button class="btn btn-sm btn-warning">Delete</button>
                         </div>
                       </div>
                       <div class="nl-team-card-footer--right">
@@ -318,7 +318,7 @@
                       <div class="nl-team-card-footer--left">
                         <div class="nl-team-card-btns">
                           <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
-                          <button class="btn btn-primary btn-sm btn-warning">Delete</button>
+                          <button class="btn btn-sm btn-warning">Delete</button>
                         </div>
                       </div>
                       <div class="nl-team-card-footer--right">
@@ -427,7 +427,7 @@
                       <div class="nl-team-card-footer--left">
                         <div class="nl-team-card-btns">
                           <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
-                          <button class="btn btn-primary btn-sm btn-warning">Delete</button>
+                          <button class="btn btn-sm btn-warning">Delete</button>
                         </div>
                       </div>
                       <div class="nl-team-card-footer--right">
@@ -536,7 +536,7 @@
                       <div class="nl-team-card-footer--left">
                         <div class="nl-team-card-btns">
                           <button class="btn btn-primary btn-sm nl-m-b-14">Edit</button>
-                          <button class="btn btn-primary btn-sm btn-warning">Delete</button>
+                          <button class="btn btn-sm btn-warning">Delete</button>
                         </div>
                       </div>
                       <div class="nl-team-card-footer--right">
