--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -1245,7 +1245,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet">
+                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                       </div>
                     </div>
                   </div>
