--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -119,7 +119,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet">
+                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -228,7 +228,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet">
+                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -337,7 +337,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet">
+                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -446,7 +446,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet">
+                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
