Change table headers

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -956,9 +956,9 @@
                             <th class="avatar">NAME</th>
                             <th>SALARY</th>
                             <th>FP</th>
+                            <th>Status</th>
                             <th>POS</th>
                             <th>team</th>
-                            <th>status</th>
                             <th>OPP</th>
                             <th>GameDAY</th>
                             <th>more</th>
