--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -90,11 +90,9 @@
       <section class="nl-section nl-players nl-contests">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-12 col-sm-4 col-md-3 col-xl-2">
-              <h1>contests</h1>
-            </div>
-            <div class="col-12 col-sm-3 col-md-3 col-xl-3">
-              <div class="nl-contests-search">
+            <div class="heading-search">
+              <h1 class="heading-search__header">contests</h1>
+              <div class="nl-contests-search heading-search__search">
                 <div class="input-group">
                   <input type="text" placeholder="Search contests" class="form-control"><span class="input-group-btn">
                     <button type="button" class="btn btn-secondary"><i class="fa fa-search" aria-hidden="true"></i></button></span>
@@ -106,7 +104,7 @@
             <div class="col-lg-8">
               <div class="nl-players-table nl-contests-table">
                 <ul role="tablist" class="nav nav-tabs">
-                  <li class="nav-item"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">Buy in No Limit coin</a></li>
+                  <li class="nav-item"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">NLC2</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#gk" role="tab" class="nav-link">Free</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#d" role="tab" class="nav-link">private pool</a></li>
                 </ul>
