--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -56,8 +56,9 @@
                 </div>
                 <div id="navbarSupportedContent" class="collapse navbar-collapse">
                   <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link"></a></li>
                     <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><span>Sport</span> <img src="assets/img/ball.png" alt="#"></a>
-                      <div aria-labelledby="dropdownMenuLink" class="dropdown-menu"><a href="#" class="dropdown-item"><span>Soccer</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Football</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Baseball</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Tennis</span> <img src="assets/img/ball.png" alt="#"></a></div>
+                      <div aria-labelledby="dropdownMenuLink" class="dropdown-menu"><a href="#" class="dropdown-item"><span>Soccer</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img"></a><a href="#" class="dropdown-item"><span>Football</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img"></a><a href="#" class="dropdown-item"><span>Baseball</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img"></a><a href="#" class="dropdown-item"><span>Tennis</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img"></a></div>
                     </li>
                     <li class="nav-item"><a href="#" class="nav-link">HOME</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">MY TEAMS+</a></li>
@@ -1134,21 +1135,21 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-5 nl-team-600">
+            <div class="col-lg-6 nl-team-600">
               <div class="nl-team-info">
                 <div class="nl-team-name">your team</div>
                 <div class="nl-team-data">
                   <div class="row">
-                    <div class="col-6">TOTAL SALARY:</div>
-                    <div class="col-6"><span>$46730</span></div>
+                    <div class="col-7">TOTAL SALARY:</div>
+                    <div class="col-5"><span>$46730</span></div>
                   </div>
                   <div class="row">
-                    <div class="col-6">Available:</div>
-                    <div class="col-6"><span class="avalibe">$25000</span></div>
+                    <div class="col-7">Available:</div>
+                    <div class="col-5"><span class="avalibe">$25000</span></div>
                   </div>
                   <div class="row">
-                    <div class="col-6">Projections:</div>
-                    <div class="col-6"><span>154</span></div>
+                    <div class="col-7">Projections:</div>
+                    <div class="col-5"><span>154</span></div>
                   </div>
                 </div>
               </div>
