Players page table whitspacing

--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -89,7 +89,7 @@
     </header>
     <main>
       <section class="nl-section nl-players">
-        <div class="container">
+        <div class="container container-narrow">
           <div class="row">
             <div class="col-md-12">
               <h1>PLAYERS</h1>
@@ -182,8 +182,8 @@
             <div class="col-md-12">
               <div class="nl-players-table">
                 <div class="nl-players-table-data-field">
-                  <div class="nl-data--avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></div>
-                  <div class="nl-data--text nl-m-r-80">
+                  <div class="nl-data--avatar hidden-sm-down"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></div>
+                  <div class="nl-data--text nl-m-r-80 hidden-sm-down">
                     <p class="title">Cristiano Ronaldo</p>
                     <p>team : Real Madrid</p>
                     <p>position: A</p>
