--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -89,7 +89,7 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-contests">
-        <div class="container">
+        <div class="container container-wider">
           <div class="row align-items-center">
             <div class="heading-search">
               <h1 class="heading-search__header">contests</h1>
@@ -102,7 +102,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-8">
+            <div class="col md-12 col-lg-8">
               <div class="nl-players-table nl-contests-table">
                 <ul role="tablist" class="nav nav-tabs">
                   <li class="nav-item"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">NLC2</a></li>
